@@ -1,3 +1,10 @@
+Update for version 10.5.0 - 08-May-2025 (PLL)
+    pkg/acs/Dates
+    pkg/acs/History
+    pkg/acs/Updates
+    pkg/acs/include/acsversion.h
+    pkg/acs/lib/acs2d/doflash.c
+
 Update for version 10.4.0 - 07-May-2024 (MDD)
     pkg/acs/Dates
     pkg/acs/History
