@@ -2,8 +2,8 @@
 #define INCL_ACSVERSION_H
 
 /* This string is written to the output primary header as CAL_VER. */
-#define ACS_CAL_VER "10.4.0 (07-May-2024)"
-#define ACS_CAL_VER_NUM "10.4.0"
+#define ACS_CAL_VER "10.5.0 (08-May-2025)"
+#define ACS_CAL_VER_NUM "10.5.0"
 
 /* This Generation of the CTE algorithm is obsolete.  These strings
    are only maintained in case a user has an older version of the
